Bug 522430 - Sometimes switching between frames doesn't work for large files
Summary: Sometimes switching between frames doesn't work for large files
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Elena Sagalaeva
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-06-30 00:25 UTC by Elena Sagalaeva
Modified: 2026-07-09 07:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Frame 31 selected, frame 51 displayed (72.95 KB, image/png)
2026-06-30 00:25 UTC, Elena Sagalaeva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elena Sagalaeva 2026-06-30 00:25:41 UTC
Created attachment 193876 [details]
Frame 31 selected, frame 51 displayed

DESCRIPTION


STEPS TO REPRODUCE
1. Load a large animation file.
2. Try to switch between frames by clicking on the animation timeline.
3. Notice that about half of the time, the frame doesn't change and the frame number doesn't change. The animation timeline changes correctly, though.

OBSERVED RESULT
About half of the time, the frame remains the same.

EXPECTED RESULT
Frames should always change correctly.

SOFTWARE/OS VERSIONS
Operating System (available in the Info Center app, or by running `kinfo` in a terminal window):
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
master branch, commit 803fe044982af6075eff9e176d6843fc55bf2707
Comment 1 Bug Janitor Service 2026-07-03 00:19:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2841
Comment 2 Emmet O'Neill 2026-07-09 01:54:27 UTC
Git commit 449adf49f1e5eda160e4de6e91283df84ee49a70 by Emmet O'Neill.
Committed on 09/07/2026 at 01:50.
Pushed by emmetoneill into branch 'krita-bug522430-frames'.

Animation: Fix missing seek while image busy (cont)

This is a continuation of Elena's fix, but removing the
unneccesary image->waitForDone call. Now large animation files
will no longer fail to seek when attempting to do so while
the image is busy processing the previous frame seek.

M  +0    -1    plugins/dockers/animation/KisTimeBasedItemModel.cpp

https://invent.kde.org/graphics/krita/-/commit/449adf49f1e5eda160e4de6e91283df84ee49a70
Comment 3 Dmitry Kazakov 2026-07-09 07:53:48 UTC
Git commit 263ff781eb7d9ae3a06f2e1fd8b115cd9f6f794d by Dmitry Kazakov, on behalf of Emmet O'Neill.
Committed on 09/07/2026 at 07:53.
Pushed by dkazakov into branch 'krita/6.0'.

Animation: Fix missing seek while image busy (cont)

This is a continuation of Elena's fix, but removing the
unneccesary image->waitForDone call. Now large animation files
will no longer fail to seek when attempting to do so while
the image is busy processing the previous frame seek.

M  +0    -1    plugins/dockers/animation/KisTimeBasedItemModel.cpp

https://invent.kde.org/graphics/krita/-/commit/263ff781eb7d9ae3a06f2e1fd8b115cd9f6f794d
Comment 4 Dmitry Kazakov 2026-07-09 07:59:04 UTC
Git commit 85a66748ef921aca42f1d4b90d49675a2d62532a by Dmitry Kazakov, on behalf of Emmet O'Neill.
Committed on 09/07/2026 at 07:51.
Pushed by dkazakov into branch 'master'.

Animation: Fix missing seek while image busy (cont)

This is a continuation of Elena's fix, but removing the
unneccesary image->waitForDone call. Now large animation files
will no longer fail to seek when attempting to do so while
the image is busy processing the previous frame seek.

M  +0    -1    plugins/dockers/animation/KisTimeBasedItemModel.cpp

https://invent.kde.org/graphics/krita/-/commit/85a66748ef921aca42f1d4b90d49675a2d62532a