Animation: Fix missing seek while image busy (cont)

This is a continuation of Elena's fix, but removing the
unneccesary image->waitForDone call. Now large animation files
will no longer fail to seek when attempting to do so while
the image is busy processing the previous frame seek.

BUG:522430