plugins/dockers/animation/KisTimeBasedItemModel.cpp
@@ -328,7 +328,6 @@ bool KisTimeBasedItemModel::setHeaderData(int section, Qt::Orientation orientati
         case ScrubToRole:
             SeekOptionFlags seekFlags = SeekOptionFlags(value.toInt());
             prioritizeCache(m_d->activeFrameIndex);
-            m_d->image->waitForDone();
             KisPart::instance()->playbackEngine()->seek(m_d->activeFrameIndex, seekFlags);
             break;
         }
